--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,10 @@ ul.posts li {
     list-style: none;
 }
 
-#zPic {
-    float: left;
+hr {
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
 
