--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    border-bottom: 1px solid black;
 }
 p {
     font-size: 1.5em;
@@ -42,10 +43,4 @@ ul.posts li {
     list-style: none;
 }
 
-hr {
-    border: 0;
-    height: 1px;
-    background: #333;
-    background-image: linear-gradient(to right, #ccc, #333, #ccc);
-}
 
