added styles for added elements in index

--- a/css/main.css
+++ b/css/main.css
@@ -42,4 +42,29 @@ ul.posts li {
     list-style: none;
 }
 
+.mainBody {
+    margin-top: 50px;
+}
+
+.topBody {
+    display:flex;
+    justify-content: space-between;
+}
+
+.myImage {
+    width:30%;
+    height:auto;
+    margin-right: 30px;
+}
+
+.time {
+    display: flex;
+    align-items: center;
+}
+#countdown{
+    color: black;
+    font-size: 50px;
+    padding: 50px;
+}
+
 
